--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@oclif/command": "^1",
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
+    "chalk": "^2.4.2",
+    "inquirer": "^6.3.1",
     "tslib": "^1"
   },
   "devDependencies": {
     "@oclif/tslint": "^3",
+    "@types/inquirer": "^6.0.1",
     "@types/node": "^10",
     "ts-node": "^8",
     "tslint": "^5",
