--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@oclif/plugin-help": "^2",
     "chalk": "^2.4.2",
     "inquirer": "^6.3.1",
+    "ora": "^3.4.0",
     "tslib": "^1"
   },
   "devDependencies": {
     "@oclif/tslint": "^3",
     "@types/inquirer": "^6.0.1",
     "@types/node": "^10",
+    "@types/ora": "^3.2.0",
     "ts-node": "^8",
     "tslint": "^5",
     "tslint-config-prettier": "^1.18.0",
