--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
     "chalk": "^2.4.2",
+    "cross-spawn": "^6.0.5",
+    "fs-extra": "^8.0.1",
     "inquirer": "^6.3.1",
     "ora": "^3.4.0",
     "tslib": "^1"
   },
   "devDependencies": {
     "@oclif/tslint": "^3",
+    "@types/cross-spawn": "^6.0.0",
+    "@types/fs-extra": "^7.0.0",
     "@types/inquirer": "^6.0.1",
     "@types/node": "^10",
     "@types/ora": "^3.2.0",
