--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,8 +1,12 @@
-*-debug.log
-*-error.log
-/.nyc_output
-/dist
-/lib
-/package-lock.json
-/tmp
 node_modules
+coverage
+.nyc_output
+.DS_Store
+*.log
+.vscode
+.idea
+dist
+compiled
+.awcache
+.rpt2_cache
+tsconfig.tsbuildinfo
