--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cross-spawn": "^6.0.5",
     "fs-extra": "^8.0.1",
     "inquirer": "^6.3.1",
+    "nodegit": "^0.25.0",
     "ora": "^3.4.0",
     "tslib": "^1"
   },
@@ -24,6 +25,7 @@
     "@types/fs-extra": "^7.0.0",
     "@types/inquirer": "^6.0.1",
     "@types/node": "^10",
+    "@types/nodegit": "^0.24.9",
     "@types/ora": "^3.2.0",
     "git-cz": "^3.2.1",
     "np": "^5.0.3",
@@ -52,7 +54,7 @@
   "scripts": {
     "posttest": "tslint -p . -t stylish",
     "prebuild": "rimraf dist",
-    "build": "tsc -b",
+    "build": "tsc",
     "commit": "git-cz",
     "release": "np",
     "prerelease": "npm run build",
