--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "importHelpers": true,
     "module": "commonjs",
     "outDir": "lib",
+    "resolveJsonModule": true,
     "rootDir": "src",
     "strict": true,
     "target": "es2017",
